[package]
name = "wiki-rs"
version = "2.0.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
bzip2-rs = "0.1"
kata = { path = "lib/kata" }
memmap = "0.7"
minidom = "0.16"
parse_wiki_text = "0.1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1.47", features = ["rt-multi-thread", "net", "macros"] }
