[package]
name = "wiki-rs"
description = "A high-performance offline reader of multistream MediaWiki dumps."
license = "MIT AND GPL-2.0-or-later"
# year.month.release-in-month
version = "2025.12.10-pre"
edition = "2024"

[dependencies]
anyhow = "1.0"
arc-cell = "0.3"
arrayvec = "0.7"
axum = "0.8"
bzip2-rs = "0.1"
either = "1.15"
env_logger = "0.11"
fancy-regex = "0.16"
gc-arena = { git = "https://github.com/kyren/gc-arena", rev = "5a7534b883b703f23cfb8c3cfdf033460aa77ea9", features = ["allocator-api2", "hashbrown"] }
html-escape = "0.2"
log = "0.4"
math-core = "0.1"
memchr = "2.7"
memmap2 = "0.9"
minidom = "0.18"
peg = { git = "https://github.com/csnover/rust-peg.git", rev = "68a910801dbcf6acc19ba2f81c352435a9072cb4" }
# urlencoding is smaller, but percent-encoding is already a sub-dependency
percent-encoding = "2"
phf = { version = "0.13.1", features = ["macros"] }
piccolo = { git = "https://github.com/csnover/piccolo.git", rev = "901ca52b75b16709eba0a534549ee80e4c22e3a2" }
piccolo-util = { git = "https://github.com/csnover/piccolo.git", rev = "901ca52b75b16709eba0a534549ee80e4c22e3a2" }
pico-args = "0.5"
r2d2 = "0.8"
rayon = "1"
regex = "1"
rxml = { version = "0.13", features = ["macros"] }
sailfish = "0.10"
scopeguard = "1.2"
schnellru = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-transcode = "1"
syntect = { version = "5.3", default-features = false, features = ["default-syntaxes", "default-themes", "html", "parsing", "regex-fancy", "yaml-load"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing"] }
tokio = { version = "1.47", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["fs"] }
tz-rs = { version = "0.7.1", features = [] }
tzdb_data = "0.2"
unicase = "2.8.1"
unicode-general-category = "1.1"
unicode-normalization = "0.1"

[features]
default = ["debug-styles"]
debug-styles = []

[build-dependencies]
regex = "1"
tzdb_data = "0.2"

[dev-dependencies]
goldenfile = "1.9"

[profile.dev-fast]
inherits = "dev"
opt-level = 3

[profile.dev-fast.package.gc-arena]
debug-assertions = false
overflow-checks = false

[profile.dev-fast.package.piccolo]
debug-assertions = false
overflow-checks = false

[profile.dev-fast.package.piccolo-util]
debug-assertions = false
overflow-checks = false

[profile.release]
debug = "line-tables-only"
lto = "thin"
